--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,7 @@ var/
 *.egg-info/
 .installed.cfg
 *.egg
+*.ipynb_checkpoints/
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
@@ -46,6 +47,9 @@ coverage.xml
 # Translations
 *.mo
 *.pot
+
+# checkpoints
+*.checkpoint.ipynb
 
 # Django stuff:
 *.log
